# SOFTENG-751-Assignment-ParaStats

./: .gitignore  .travis.yml  CMakeLists.txt  CMakeLists.txt.in  FindOpenCl.cmake  README.md  benchmark.sh  data.csv  hello_world.cpp  main.cpp
data/: benchmark_normal_102400.csv  benchmark_normal_512000.csv  generateData.m  pressure_summary_stats.txt  standardDatasets.m  temperature_summary_stats.txt  voltage_normal_160000.csv  voltage_normal_320000.csv  voltage_normal_80000.csv  voltage_summary_stats.txt
presentation/: 751presentation.bib  main.tex
report/: main.tex  maxmin.cpp  references.bib  sequential.py
report/sections/: abstract.tex  approach.tex  bibliography.tex  conclusion.tex  contributions.tex  frontmatter.tex  implementation.tex  introduction.tex  limitations.tex  preamble.tex  results.tex
src/: main.cpp
src/computations/: AbstractComputation.cpp  AbstractComputation.hpp  ParallelComputation.cpp  ParallelComputation.hpp  SequentialComputation.cpp  SequentialComputation.hpp
src/interfaces/: CommandLineInterface.cpp  CommandLineInterface.hpp  ExitException.cpp  ExitException.hpp
src/kernels/: mean.cl  minmax.cl  stats.cl  vadd.cl
src/statistics/: SummaryStatistics.cpp  SummaryStatistics.hpp  statStructs.hpp
test/: main_test.cpp
test/computations/: ComputationTest.cpp  ComputationTest.hpp
test/statistics/: SummaryStatisticsTest.cpp  SummaryStatisticsTest.hpp
